--- a/client/Profile.css
+++ b/client/Profile.css
@@ -1,11 +1,19 @@
-body{margin-top:20px;
+body{
     color: #bcd0f7;
         background: #FFFFFF;
+        min-height: 100vh;
     }
     .account-settings .user-profile {
         margin: 0 0 1rem 0;
         padding-bottom: 1rem;
         text-align: center;
+    }
+
+    .section{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-top: 10rem;
     }
     .account-settings .user-profile .user-avatar {
         margin: 0 0 1rem 0;
