--- a/client/Profile.css
+++ b/client/Profile.css
@@ -39,7 +39,7 @@ body{
         text-align: center;
     }
     .card {
-        background: #FE5B29;
+        background: #F1F1F1 !important;
         -webkit-border-radius: 5px;
         -moz-border-radius: 5px;
         border-radius: 5px;
